# advent_of_code_2023

./: .gitignore  README.md  pyproject.toml  read_input.py
advent_of_code_2023/: __init__.py  read_input.py
advent_of_code_2023/day_1/: app.py  test_app.py
advent_of_code_2023/day_10/: app.py  test_app.py
advent_of_code_2023/day_11/: app.py
advent_of_code_2023/day_12/: app.py  test_app.py
advent_of_code_2023/day_2/: app.py  test_app.py
advent_of_code_2023/day_3/: app.py  test_app.py
advent_of_code_2023/day_4/: app.py  test_app.py
advent_of_code_2023/day_5/: app.py  test_app.py
advent_of_code_2023/day_6/: app.py  test_app.py
advent_of_code_2023/day_7/: app.py  test_app.py
advent_of_code_2023/day_8/: app.py  test_app.py
advent_of_code_2023/day_9/: app.py  test_app.py
advent_of_code_2023/template/: app.py  test_app.py
day_1/: app.py
