[tool.poetry]
name = "advent-of-code-2023"
version = "0.1.0"
description = "My attempt at the Advent of Code coding challenge 2023"
authors = ["peaky76 <robertjamespeacock@gmail.com>"]
readme = "README.md"
packages = [{include = "advent_of_code_2023"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
